@@ -46,8 +46,8 @@ def update_rules (rules):
 
 class Dep (Depend):
 	def __init__ (self, target, source, env):
-		leaf = DependLeaf([source])
-		Depend.__init__(self, [target], {source: leaf})
+		leaf = DependLeaf([source], env.msg)
+		Depend.__init__(self, [target], {source: leaf}, env.msg)
 		self.env = env
 		self.source = source
 		self.target = target
