@@ -9,8 +9,8 @@ from rubber.util import *
 
 class Dep (Depend):
 	def __init__ (self, target, source, env):
-		leaf = DependLeaf([source])
-		Depend.__init__(self, [target], {source: leaf})
+		leaf = DependLeaf([source], env.msg)
+		Depend.__init__(self, [target], {source: leaf}, env.msg)
 		self.env = env
 		self.source = source
 
